# cmake-template

./: .gitignore  CMakeLists.txt
example/: CMakeLists.txt  run.cpp
include/: mylib.h
src/: CMakeLists.txt  mylib.cpp
test/: CMakeLists.txt  mylib_test.cpp
